Header and Control Board component

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap");
 html,
 body,
 #root {
 	margin: 0;
 	height: 100%;
 	width: 100%;
+	font-size: 12px;
 }
 * {
 	box-sizing: border-box;
@@ -19,7 +21,7 @@ li {
 	list-style-type: none;
 }
 
-img {
+.card--container img {
 	width: 70px;
 }
 .CardsBoard--wrapper {
@@ -90,4 +92,42 @@ img {
 	100% {
 		transform: scale(1);
 	}
+}
+/** HEADER **/
+
+.header-container {
+	height: 120px;
+	background-color: rgb(78, 139, 186);
+}
+
+.header-container img {
+	width: 130px;
+	height: auto;
+	vertical-align: middle;
+}
+
+.header-img-container {
+	display: inline-block;
+	padding: 16px;
+}
+
+.header-title-container {
+	font-family: "Orbitron", sans-serif;
+	display: inline-block;
+	padding: 16px;
+	height: 100%;
+	font-size: 18px;
+}
+/** ControlBoard  */
+
+.controlBoard-container {
+	display: flex;
+	justify-content: center;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 50px;
+}
+.controlBoard-radioBtn {
+	display: flex;
+	flex-direction: column;
 }
