--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ li {
 .CardsBoard--wrapper {
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 50px;
+	padding: 0 50px;
 	/* height: 100%; */
 	display: flex;
 	flex-direction: row;
@@ -47,7 +47,11 @@ li {
 	transform-style: preserve-3d;
 	transition: all 0.5s ease;
 }
-
+.controlBoard-btn {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
 /* .card:hover {
 	transform: rotateY(180deg);
 } */
@@ -122,12 +126,21 @@ li {
 
 .controlBoard-container {
 	display: flex;
-	justify-content: center;
-	max-width: 1200px;
+	justify-content: space-evenly;
+	max-width: 400px;
 	margin: 0 auto;
 	padding: 50px;
 }
 .controlBoard-radioBtn {
 	display: flex;
 	flex-direction: column;
+}
+.controlBoard-userAction,
+.controlBoard-stats {
+	display: flex;
+	flex-direction: column;
+	height: 110px;
+	justify-content: space-between;
+	font-family: Orbitron;
+	font-weight: bold;
 }
