--- a/src/index.css
+++ b/src/index.css
@@ -144,3 +144,25 @@ li {
 	font-family: Orbitron;
 	font-weight: bold;
 }
+
+/** FOOTER */
+#footer {
+	text-align: center;
+	width: 100%;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 12px;
+	color: rgb(78, 139, 186);
+	/* padding-top: 10px; */
+	/* margin: 0 auto; */
+}
+#github_icon {
+	width: 34px;
+	height: 34px;
+}
+#footer a {
+	text-decoration: none;
+	color: rgb(78, 139, 186);
+}
+#footer a:hover {
+	color: #606060;
+}
